[workspace]
members = [
    "assembly",
    "vm-core",
    "vm-circuits",
    "processor",
    "prover",
    "verifier",
    "olavm",
    "util",
    "field",
    # "evm-stark",
    "plonky2",
    "wrapper_rayon",
]

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true