[workspace]
members = [
    "circuits",
    "client",
    "core",
    "executor",
    "plonky2/plonky2",
    "plonky2/field",
    "plonky2/util",
    "plonky2/maybe_rayon",
    "assembler",
    "interpreter",
    "node"
]

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true