[package]
name = "olavm-assembly"
version = "0.1.0"
description = "OlaVM assembly language"
readme = "README.md"
license = "MIT"
edition = "2021"


[lib]
bench = false
doctest = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.3.1"
pest_derive = "2.3.1"

[dev-dependencies]
glob = "0.3.0"