[package]
name = "circuits"
version = "0.1.0"
description = "olaVM circuits"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { package = "core", path = "../core", version = "0.1.0", default-features = false }
executor = { package = "executor", path = "../executor", version = "0.1.0", default-features = false }

plonky2 = { package = "plonky2", path = "../plonky2/plonky2" }

starky = { package = "starky", path = "../plonky2/starky" }

anyhow = "1.0"
num = "0.4"
itertools = "0.8"