[package]
name = "circuits"
version = "0.1.0"
description = "olaVM circuits"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { package = "core", path = "../core", version = "0.1.0", default-features = false }
executor = { package = "executor", path = "../executor", version = "0.1.0", default-features = false }
plonky2 = { package = "plonky2", path = "../plonky2/plonky2" }
anyhow = "1.0.40"
num = "0.4"
itertools = "0.10.3"
maybe_rayon = { path = "../plonky2/maybe_rayon" }
plonky2_util = {  path = "../plonky2/util" }
serde = { version = "1.0.144", features = ["derive"] }
ethereum-types = "0.14.0"