[package]
name = "circuits"
version = "0.1.0"
description = "olaVM circuits"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["benchmark"]
benchmark = []

[dependencies]
core = { package = "core", path = "../core", version = "0.1.0", default-features = false }
executor = { package = "executor", path = "../executor", version = "0.1.0", default-features = false }
assembler = { package = "assembler", path = "../assembler", version = "0.1.0", default-features = false }

plonky2 = { package = "plonky2", path = "../plonky2/plonky2" }
anyhow = "1.0.40"
itertools = "0.10.3"
maybe_rayon = { path = "../plonky2/maybe_rayon" }
plonky2_util = {  path = "../plonky2/util" }
serde = { version = "1.0.144", features = ["derive"] }
ethereum-types = "0.14.0"
log = "0.4.14"
eth_trie_utils = "0.6.0"
env_logger = "0.9.0"
hex = { version = "0.4.3", optional = true }
hex-literal = "0.3.4"
keccak-hash = "0.10.0"
num = "0.4.0"
once_cell = "1.13.0"
pest = "2.1.3"
pest_derive = "2.1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
ripemd = "0.1.3"
rlp = "0.5.1"
rlp-derive = "0.1.0"
sha2 = "0.10.2"
tiny-keccak = "2.0.2"
criterion = "0.4"
serde_json = "1"
tokio = "1"

[[bench]]
name = "fibo_loop"
harness = false

# [[bench]]
# name = "fibo_loop_prover"
# harness = false

# [[bench]]
# name = "sqrt_iteration"
# harness = false

[[bench]]
name = "sqrt_prophet"
harness = false