[package]
name = "client"
version = "0.1.0"
edition = "2021"
authors = ["olavm contributors"]
description = "Ola virtual machine client"
readme="README.md"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "ola"
path = "src/main.rs"
bench = false
doctest = false

[dependencies]
plonky2 = { package = "plonky2", path = "../plonky2/plonky2" }
env_logger = { version = "0.9"}
hex = { version = "0.4", optional = true }
log = { version = "0.4", default-features = false }
clap = { version = "3.2"}
executor = { package = "executor", path = "../executor", version = "0.1.0", default-features = false }
circuits = { package = "circuits", path = "../circuits", version = "0.1.0", default-features = false }
serde_json = "1"
serde = {version = "1" }
serde_derive = {version = "1"}
core = { package = "core", path = "../core", version = "0.1.0", default-features = false }
assembler = { package = "assembler", path = "../assembler", version = "0.1.0", default-features = false }

tokio = { version = "1", features = ["full"] }
crossbeam = "0.4.1"
lazy_static = "1.4.0"

[dev-dependencies]
sha2 = "0.10.2"
sha3 = "0.10.1"

[features]

