[package]
name = "core"
version = "0.1.0"
description = "Olavm core components"
readme = "README.md"
license = "MIT"
edition = "2021"

[lib]
bench = false
doctest = false

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
num_enum = "0.5.7"
plonky2 = { path = "../plonky2/plonky2"}
enum-iterator = "1.4.0"
regex = "1"
thiserror = "1.0"
itertools = "0.10"
futures = "0.3"
web3 = "0.16"
rayon = "1.7.0"
once_cell = "1.7"
log = "0.4"
rocksdb = { version = "0.21", default-features = false, features = ["snappy"] }
byteorder = "1.3"
num_cpus = "1"
bincode = "1"
env_logger = "0.10"
tempfile = "3"
blake2 = "0.10"
rand = "0.8"