[package]
name = "olavm_stark"
version = "0.1.0"
description = "implementation of STARKs for OlaVM"
edition = "2021"

[dependencies]
olavm_plonky2 = { path = "../plonky2", default-features = false, features = ["rand", "timing"] }
olavm_util = { path = "../util" }
eth_trie_utils = "0.2.1"
anyhow = "1.0.40"
env_logger = "0.9.0"
ethereum-types = "0.14.0"
hex = { version = "0.4.3", optional = true }
hex-literal = "0.3.4"
itertools = "0.10.3"
keccak-hash = "0.10.0"
log = "0.4.14"
num = "0.4.0"
wrapper_rayon = { path = "../wrapper_rayon" }
once_cell = "1.13.0"
pest = "2.1.3"
pest_derive = "2.1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
ripemd = "0.1.3"
rlp = "0.5.1"
rlp-derive = "0.1.0"
serde = { version = "1.0.144", features = ["derive"] }
sha2 = "0.10.2"
tiny-keccak = "2.0.2"

[dev-dependencies]
criterion = "0.3.5"
hex = "0.4.3"

[features]
default = ["parallel"]
asmtools = ["hex"]
parallel = ["olavm_plonky2/parallel", "wrapper_rayon/parallel"]

[[bin]]
name = "assemble"
required-features = ["asmtools"]
