[package]
name = "executor"
version = "0.1.0"
description = "OlaVM executor"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
core = { package = "core", path = "../core", version = "0.1.0"}
log = "0.4"
env_logger = "0.6"
serde_json = "1"
serde = {version = "1" }
serde_derive = {version = "1"}
plonky2 = { path = "../plonky2/plonky2" }
interpreter = {path="../interpreter"}
criterion = "0.4"
regex = "1"
anyhow = "1.0.70"
thiserror = "1.0.40"
rocksdb = { version = "0.21", default-features = false, features = ["snappy"] }
tempfile = "3"
itertools = "0.10"

[[bench]]
name = "fibo_loop"
harness = false

[[bench]]
name = "sqrt_iteration"
harness = false

[[bench]]
name = "sqrt_prophet"
harness = false
