[package]
name = "executor"
version = "0.1.0"
description = "OlaVM executor"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
core = { package = "core", path = "../core", version = "0.1.0"}
log = "0.4"
env_logger = "0.6"
serde_json = "1"
serde = {version = "1" }
serde_derive = {version = "1"}
plonky2 = { path = "../plonky2/plonky2" }
interpreter = {path="../interpreter"}
criterion = "0.4"
regex = "1"
anyhow = "1.0.70"
thiserror = "1.0.40"
rocksdb = { version = "0.21", default-features = false, features = ["snappy"] }
tempfile = "3"
itertools = "0.10"
rand = "0.8"
bincode = "1"
byteorder = "1.3"
tokio = { version = "=1.35.0", features = ["full"] }
secp256k1 = { version = "0.28.1", default-features = false, features = ["hashes-std", "std", "recovery"] }
num = "0.4.1"
num_cpus = "1"
lru = "0.12.2"

[dev-dependencies]
ola-lang-abi = "1.0.2"
