[package]
name = "interpreter"
version = "0.1.0"
description = "Olavm core components"
readme = "README.md"
license = "MIT"
edition = "2021"

[lib]
doctest = false

[dependencies]
log = "0.4"
env_logger = "0.10"
lazy_static = "1.0.0"
regex = "1.0.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
node_derive = {path="../macro/node_derive"}
assembler = {path="../assembler"}