[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { package = "core", path = "../core", version = "0.1.0"}
executor = { package = "executor", path = "../executor", version = "0.1.0", default-features = false }
serde_json = "1"
serde = {version = "1" }
serde_derive = {version = "1"}