[package]
name = "olavm"
version = "0.1.0"
edition = "2021"
authors = ["olavm contributors"]
description = "Ola virtual machine"
readme="README.md"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "olavm"
path = "src/main.rs"
bench = false
doctest = false

[lib]
name = "olavm"
path = "src/lib.rs"
bench = false
doctest = false

[dependencies]
assembly = { package = "olavm-assembly", path = "../assembly", version = "0.1.0", default-features = false }
env_logger = { version = "0.9", default-features = false, optional = true }
hex = { version = "0.4", optional = true }
log = { version = "0.4", default-features = false }
clap = { version = "3.2.17"}
processor = { package = "olavm-processor", path = "../processor", version = "0.1.0", default-features = false }
prover = { package = "olavm-prover", path = "../prover", version = "0.1.0", default-features = false }
serde = {version = "1.0.117", optional = true }
serde_derive = {version = "1.0.117", optional = true }
serde_json = {version = "1.0.59", optional = true }
verifier = { package = "olavm-verifier", path = "../verifier", version = "0.1.0", default-features = false }
vm-core = { package = "olavm-core", path = "../vm-core", version = "0.1.0", default-features = false }

[dev-dependencies]
sha2 = "0.10.2"
sha3 = "0.10.1"

[features]

