[package]
name = "olavm-processor"
version = "0.1.0"
description = "OlaVM processor"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
vm-core = { package = "olavm-core", path = "../vm-core", version = "0.1.0", default-features = false }
log = "0.4"
serde_json = "1"
serde = {version = "1" }
serde_derive = {version = "1"}