[package]
name = "olavm-processor"
version = "0.1.0"
description = "OlaVM processor"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
vm-core = { package = "olavm-core", path = "../vm-core", version = "0.1.0", default-features = false }
log = "0.4"
env_logger = "0.6"
serde_json = "1"
serde = {version = "1" }
serde_derive = {version = "1"}
plonky2 = { git="https://github.com/mir-protocol/plonky2.git/", rev="7b2f515c007a78eb4bca36821ad28a762b1e1095"}
#xlsxwriter = "0.4"