[package]
name = "olavm-prover"
version = "0.1.0"
description = "olaVM prover"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vm-core = { package = "olavm-core", path = "../vm-core", version = "0.1.0", default-features = false }
processor = { package = "olavm-processor", path = "../processor", version = "0.1.0", default-features = false }

