[package]
name = "zk-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ola-core = { package = "core", path = "../core", version = "0.1.0" }
executor = { package = "executor", path = "../executor", version = "0.1.0", default-features = false }
serde_json = "1"
serde = { version = "1" }
serde_derive = { version = "1" }
env_logger = "0.6"
log = "0.4"
thiserror = "1.0"
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
rand = "0.8.5"
bincode = "1.3.3"
