[package]
name = "plonky2_field"
description = "Finite field arithmetic"
version = "0.1.0"
edition = "2021"

[features]
default = ["rand", "cuda"]
rand = ["dep:rand"]
parallel = ["maybe_rayon/parallel"]
cuda = ["cxx", "cmake", "tokio", "crossbeam", "lazy_static"]

[dependencies]
plonky2_util = { path = "../util" }
anyhow = "1.0.40"
itertools = "0.10.0"
num = { version = "0.4", features = [ "rand" ] }
rand = { optional = true, version = "0.8.4" }
serde = { version = "1.0", features = ["derive"] }
unroll = "0.1.5"
static_assertions = "1.1.0"
maybe_rayon = { path = "../maybe_rayon" }
cxx = { version = "1.0", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
crossbeam = { version = "0.4.1", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[build-dependencies]
cmake = { version = "0.1.0", optional = true }